fix: Text colour in dark mode on Firefox (#349)

--- a/src/static/common.css
+++ b/src/static/common.css
@@ -94,7 +94,8 @@ input:hover {
 	outline-offset: var(--focus-outline-offset);
 }
 
-label {
+label,
+p {
 	color: var(--text-1);  /* countermand Firefox extension.css */
 }
 
